--- a/producer-git/pom.xml
+++ b/producer-git/pom.xml
@@ -49,8 +49,12 @@
 				<version>${spring-cloud-contract.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<!-- <contractsRepositoryUsername>**</contractsRepositoryUsername>
-					<contractsRepositoryPassword>**</contractsRepositoryPassword> -->
+					<!-- 生成的测试类的位置 -->
+					<basePackageForTests>c.s.producer</basePackageForTests>
+					<packageWithBaseClasses>c.s.producer</packageWithBaseClasses>
+					<contractsMode>REMOTE</contractsMode>
+					<contractsRepositoryUsername>git-user</contractsRepositoryUsername>
+					<contractsRepositoryPassword>git-pass</contractsRepositoryPassword> 
 					<contractsRepositoryUrl>git://https://code.newtouch.com/taichi/cloud-contract.git</contractsRepositoryUrl>
 					<contractDependency>
 						<groupId>${project.groupId}</groupId>
@@ -58,8 +62,6 @@
 						<version>${project.version}</version>
 					</contractDependency>
 					<!-- The mode can't be classpath -->
-					<contractsMode>REMOTE</contractsMode>
-					<basePackageForTests>c.s.producer</basePackageForTests>
 					<executions>
 					<execution>
 						<phase>package</phase>
